create security config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # JWT
 app.jwt.secret=TroquePorUmSegredoBemGrandeEEstaticoAqui1234567890
-app.jwt.expiration=3600000
+app.jwt.expiration-minutes=3600000
 
