--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,9 @@
 spring.application.name=demo
-spring.datasource.url=jdbc:postgresql://localhost:5432/local
+spring.datasource.url=jdbc:postgresql://localhost:5432/imersao
 spring.datasource.username=postgres
 spring.datasource.password=admin123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-# JWT
-app.jwt.secret=TroquePorUmSegredoBemGrandeEEstaticoAqui1234567890
-app.jwt.expiration=3600000
 
